# pymoca

./: .appveyor.yml  .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.md  antlr_build.py  compiler.py  create_conda_env.sh  pyproject.toml  requirements-py2.txt  requirements-py3.txt  requirements.txt  runme.py  setup.cfg  setup.py  tox.ini  wercker.yml
.github/workflows/: ci.yml
antlr/: antlr_build.py
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst  modules.rst  parser_ModelicaParser_parsetab.rst  pymoca.generated.rst  pymoca.rst  pymola.generated.rst  pymola.parser.grako_parser.rst  pymola.parser.grako_parser.test.rst  pymola.parser.parsimonious_parser.rst  pymola.parser.parsimonious_parser.test.rst  pymola.parser.ply_parser.rst  pymola.parser.ply_parser.test.rst  pymola.parser.rst  pymola.rst
notebook/: Ball.mo  RigidBody.mo  Simple-Gen3.ipynb  Simple.ipynb  Test.mo  V5.ipynb  V6.ipynb  ball.py  pymola_test.py
notebook/.ipynb_checkpoints/: Simple-checkpoint.ipynb
pymola/: Modelica.g4  ModelicaAST.g4  ast.py  compiler.py  gen_casadi.py  gen_numpy.py  gen_sympy.py  gen_sympy2.py  gen_sympy3.py  gen_sympy4.py  gen_sympy5.py  parser.py  sympy.jinja  sympy_runtime.py  tree.py  version.py
pymola/backends/casadi/: AUTHORS  alias_relation.py  api.py  generator.py  model.py
pymola/backends/sympy/: generator.py  runtime.py
pymola/notebook/: Untitled0.ipynb
pymola/old/: ast.py  flattener.py  gen_sympy3.py  version.py
pymola/old/test/: .gitignore  Estimator.mo  test.py
pymola/parser/antlr_parser/: BouncingBall.mo  DOT.g4  FSM.g4  Fsm.g4  Makefile  Modelica.g4  SMC.g4  antlr4  dot.py  fsm.py  modelica.py  test.fsm
pymola/parser/grako/: Modelica.ebnf  test.py
pymola/parser/grako_parser/: Makefile  Modelica.ebnf  model.py  parser.py  parser_test.py  semantics.py
pymola/parser/grako_parser/test/: parser_test.py
pymola/parser/parsimonious/: parser.py
pymola/parser/parsimonious_parser/: __init__.py  parser.py  parser_test.py  visitors.py
pymola/parser/parsimonious_parser/test/: parser_test.py
pymola/parser/ply_parser/: parser.py  parser_test.py
pymola/parser/ply_parser/test/: parser_test.py
pymola/templates/: sympy.jinja
pymola/test/: .gitignore  Aircraft.mo  BouncingBall.mo.py  BouncingBall2_pymola.py  BouncingBall_pymola.py  Estimator_pymola.py  Test.mo  test.py
src/pymoca/: Modelica.g4  __init__.py  _version.py  ast.py  parser.py  tree.py  version.py
src/pymoca/backends/casadi/: AUTHORS  _options.py  alias_relation.py  api.py  generator.py  model.py  mtensor.py
src/pymoca/backends/sympy/: generator.py  runtime.py
src/pymoca/backends/xml/: analysis.py  generator.py  model.py  parser.py  sim_scipy.py
src/pymola/: Modelica.g4  _version.py  ast.py  parser.py  tree.py
src/pymola/backends/casadi/: api.py  generator.py  model.py
src/pymola/backends/casadi_b/: generator.py  model.py  model_extra.py  notebook.py
src/pymola/backends/sympy/: generator.py  runtime.py
test/: .gitignore  Aircraft.mo  AircraftNew.mo  ArrayExpressions.mo  Attributes.mo  BouncingBall.ipynb  Casadi.ipynb  Concat.mo  Connector.mo  ConnectorHQ.mo  ConnectorHQZ.mo  ConstantReferences.mo  Estimator.mo  ExtendsRedeclareable.mo  ForLoop.mo  FunctionCall.mo  FunctionDefinition.mo  FunctionPull.mo  IfElse.mo  Inheritance.mo  InheritanceInstantiation.mo  InheritanceMultiFile.mo  Init.ipynb  MatrixExpressions.mo  NegativeAlias.mo  NestedSymbolModification.mo  Quad.ipynb  RedeclarationScope.mo  RedeclareInExtends.mo  SimpleArray.mo  Simplify.mo  SimplifyLoop.mo  SimplifyVector.mo  Spring.ipynb  StateAnnotator.mo  Test.ipynb  TreeLookup.mo  Type.mo  alias_relation_test.py  ast_test.py  (+8 more)
test/models/: Aircraft.mo  Alias.mo  Annotations.mo  Array3D.mo  ArrayExpand.mo  ArrayExpressions.mo  ArrayParameters.mo  Attributes.mo  BuiltinFunctions.mo  Concat.mo  ConflictingAliasStart.mo  Connector.mo  ConnectorHQZ.mo  CustomUnits.mo  DeepCopyTimeout.mo  Delay.mo  DelayForLoop.mo  DoubleFunctionCall.mo  DuplicateState.mo  Estimator.mo  Exponential.mo  ExtendsModification.mo  ExtendsOrder.mo  ForLoop.mo  FunctionCall.mo  IfElse.mo  Import.mo  InheritanceInstantiation.mo  InheritanceInstantiationResistor.mo  InlineAssignment.mo  InstantiationTree.mo  Interpolate.mo  IterativeSimplification.mo  IterativeSimplificationLarge.mo  Logic.mo  MatrixExpressions.mo  ModificationTypo.mo  NestedClasses.mo  NestedForLoop.mo  Noise.mo  (+21 more)
test/models/Package/: Spring.mo  package.mo
test/notebooks/: Car.ipynb  Casadi.ipynb  Init.ipynb  Quad.ipynb  SimpleCircuit.ipynb  Spring.ipynb  SpringTest.ipynb  XML.ipynb
tools/: compiler.py  create_conda_env.sh
