[build-system]
requires = ["setuptools", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

# See the docstring in versioneer.py for instructions. Note that after changing
# this section, run `versioneer install --no-vendor`, commit the results.

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/pymoca/_version.py"
versionfile_build = "pymoca/_version.py"
tag_prefix = ""
parentdir_prefix = "pymoca-"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
force-exclude = '''
	(
		  src/pymoca/generated
		| src/pymoca/_version.py
		| test/generated
		| test/libraries
	)
'''
