[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pymoca"
dynamic = ["version"]
license = { file = "LICENSE" }
description = "A Modelica to computer algebra system (CAS) translator."
keywords = ["modelica", "simulation", "compiler"]
readme = "README.md"
authors = [{ name = "Pymoca Contributors" }]
maintainers = [
    { name = "Jack Vreeken", email = "jack@vreeken.me" },
    { name = "Kent Rutan", email = "gs1150e@icloud.com" },
]
requires-python = ">=3.9"
dependencies = ["numpy >= 1.8.2", "antlr4-python3-runtime == 4.13.*"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Other",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Embedded Systems",
]

[project.urls]
homepage = "https://github.com/pymoca/pymoca"

[project.optional-dependencies]
# Note that we need setuptools for the distutils.ccompiler dependency
# in the CasADi backend.
casadi = ["casadi>=3.4.0", "setuptools>=60.0.0"]
lxml = ["lxml>=3.5.0", "scipy>=0.13.3"]
sympy = ["sympy>=0.7.6.1", "scipy>=0.13.3", "jinja2>=2.10.1"]
examples = ["jupyterlab", "matplotlib", "control>=0.9.3.post2,<=0.10.0"]
all = ["pymoca[casadi,lxml,sympy,examples]"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["src/pymoca"]
include = [
  "/LICENSE",
  "/README.md",
  "/doc/**/*",
  "/java/**/*",
  "/src/pymoca/Modelica.g4",
  "/src/pymoca/backends/xml/ModelicaXML/schemas/*.xsd"
]

[tool.ruff]
lint.ignore = [
    "B006", # use mutable data structures for argument defaults
]
line-length = 100
lint.select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # default / pycodestyle
    "F", # default / pyflakes
    "I", # isort
    "W", # pycodestyle
]
