[metadata]
license_file = LICENSE

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pymoca/_version.py
versionfile_build = pymoca/_version.py
tag_prefix =
parentdir_prefix = pymoca-


[flake8]
max-line-length = 100
exclude =
	src/pymoca/generated,
	src/pymoca/_version.py,
	test/generated,
	test/libraries,
ignore =
    # Suggestion to use dict() over {}
    # C408,
    # Space before colon (not PEP-8 compliant, and conflicts with black)
    E203,
    # Starting lines with operators. We prefer it this way actually, and black
    # also likes it like this.
    W503,
    # Maximum line length, will fix later
    E501,
