[metadata]
license_file = LICENSE

[flake8]
max-line-length = 100
exclude =
	src/pymoca/generated,
	src/pymoca/_version.py,
	test/generated,
	test/libraries,
ignore =
    # Suggestion to use dict() over {}
    # C408,
    # Space before colon (not PEP-8 compliant, and conflicts with black)
    E203,
    # Starting lines with operators. We prefer it this way actually, and black
    # also likes it like this.
    W503,
    # Maximum line length, will fix later
    E501,
